[gd_scene load_steps=10 format=2]

[ext_resource path="res://scenes/game_mode_select.gd" type="Script" id=1]
[ext_resource path="res://theme-default.tres" type="Theme" id=2]
[ext_resource path="res://art-built/9patch/background-game.png" type="Texture" id=3]
[ext_resource path="res://scripts/background.gd" type="Script" id=4]
[ext_resource path="res://art-built/button-multiplayer.png" type="Texture" id=5]
[ext_resource path="res://fonts/Amaranth-Regular-24.tres" type="DynamicFont" id=6]
[ext_resource path="res://art-built/button-vs-ai.png" type="Texture" id=7]
[ext_resource path="res://art-built/button-tutorial.png" type="Texture" id=8]
[ext_resource path="res://art-built/close-x.png" type="Texture" id=9]

[node name="game_mode_select" type="Node"]

script = ExtResource( 1 )

[node name="ui" type="Control" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 2 )
_sections_unfolded = [ "Theme" ]

[node name="bg" type="Sprite" parent="ui" index="0"]

position = Vector2( -1.70459, 1.70459 )
texture = ExtResource( 3 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 540, 960 )
script = ExtResource( 4 )
_sections_unfolded = [ "Animation", "Offset", "Region" ]

[node name="button_multiplayer" type="TextureButton" parent="ui" index="1"]

anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -197.0
margin_top = -565.0
margin_right = 197.0
margin_bottom = -413.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 5 )
expand = true
stretch_mode = 5
_sections_unfolded = [ "Material", "Rect", "Textures" ]

[node name="wins_label" type="Label" parent="ui/button_multiplayer" index="0"]

anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_left = -231.0
margin_top = 7.0
margin_right = -31.0
margin_bottom = 57.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 6 )
text = "Wins: 42"
align = 2
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Anchor", "custom_fonts" ]

[node name="button_ai" type="TextureButton" parent="ui" index="2"]

anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -197.0
margin_top = -377.0
margin_right = 197.0
margin_bottom = -225.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 7 )
expand = true
stretch_mode = 5
_sections_unfolded = [ "Rect", "Textures" ]

[node name="button_tutorial" type="TextureButton" parent="ui" index="3"]

anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -197.0
margin_top = -189.0
margin_right = 197.0
margin_bottom = -115.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 8 )
expand = true
stretch_mode = 5
_sections_unfolded = [ "Rect", "Textures" ]

[node name="label" type="Label" parent="ui" index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_top = 93.0
margin_bottom = 133.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 6 )
text = "Select game mode"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="back_button" type="TextureButton" parent="ui" index="5"]

anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_left = -50.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = 50.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 9 )
expand = true
stretch_mode = 5
_sections_unfolded = [ "Anchor", "Margin", "Rect", "Textures" ]


